// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ori --help: A2 1`] = `
"Usage: ori <command> [options]

Options:
  -h, --help                 display help for command

Commands:
  init [options] <app-name>  init a new project
  dev                        alias of \\"ori dev\\" in the current project
  build                      alias of \\"ori build\\" in the current project
  tovite [options]           use vite in the current project
  tovue3 [options]           use vue-next in the current project
  help [command]             display help for command"
`;

exports[`ori -h: A1 1`] = `
"Usage: ori <command> [options]

Options:
  -h, --help                 display help for command

Commands:
  init [options] <app-name>  init a new project
  dev                        alias of \\"ori dev\\" in the current project
  build                      alias of \\"ori build\\" in the current project
  tovite [options]           use vite in the current project
  tovue3 [options]           use vue-next in the current project
  help [command]             display help for command"
`;

exports[`ori init --help: A5 1`] = `
"Usage: ori init [options] <app-name>

init a new project

Options:
  -d,--default      skip init project options
  -a,--all-plugins  create project with all plugins
  -h, --help        display help for command"
`;

exports[`ori init with all plugins: A3 1`] = `
"{
  \\"name\\": \\"testAllPlugins\\",
  \\"version\\": \\"1.0.0\\",
  \\"license\\": \\"ISC\\",
  \\"scripts\\": {
    \\"dev\\": \\"vite\\",
    \\"build\\": \\"vue-tsc --noEmit && vite build\\",
    \\"serve\\": \\"vite preview\\"
  },
  \\"dependencies\\": {
    \\"vue\\": \\"^3.0.5\\",
    \\"vue-router\\": \\"^4.0.11\\"
  },
  \\"devDependencies\\": {
    \\"@vitejs/plugin-vue\\": \\"^1.3.0\\",
    \\"@vue/compiler-sfc\\": \\"^3.0.5\\",
    \\"@originjs/vite-plugin-assets\\":\\"latest\\",
    \\"unplugin-vue-components\\":\\"latest\\",
    \\"@originjs/vite-plugin-content\\":\\"latest\\",
    \\"@originjs/vite-plugin-pages\\":\\"latest\\",
    \\"typescript\\": \\"^4.3.2\\",
    \\"vite\\": \\"^2.4.4\\",
    \\"vue-tsc\\": \\"^0.2.2\\"
  }
}
"
`;

exports[`ori init with all plugins: A3 2`] = `
"import { defineConfig } from 'vite'
import vue from '@vitejs/plugin-vue'
import assets from '@originjs/vite-plugin-assets'
import Components from 'unplugin-vue-components'
import content from '@originjs/vite-plugin-content'
import pages from '@originjs/vite-plugin-pages'

// https://vitejs.dev/config/
export default defineConfig({
  plugins:[
    vue(),
    assets(),
    Components({
      // allow auto load markdown components under \`./src/components/\`
      extensions: ['vue', 'md'],
      // allow typescript
      dts: true,
      // allow auto import and register components used in markdown
      include: [/\\\\.vue$/, /\\\\.vue\\\\?vue/, /\\\\.md$/],
    }),
    content(),
    pages()
  ]
})
"
`;

exports[`ori init without plugins: A3 1`] = `
"{
  \\"name\\": \\"testAllPlugins\\",
  \\"version\\": \\"1.0.0\\",
  \\"license\\": \\"ISC\\",
  \\"scripts\\": {
    \\"dev\\": \\"vite\\",
    \\"build\\": \\"vue-tsc --noEmit && vite build\\",
    \\"serve\\": \\"vite preview\\"
  },
  \\"dependencies\\": {
    \\"vue\\": \\"^3.0.5\\",
    \\"vue-router\\": \\"^4.0.11\\"
  },
  \\"devDependencies\\": {
    \\"@vitejs/plugin-vue\\": \\"^1.3.0\\",
    \\"@vue/compiler-sfc\\": \\"^3.0.5\\",
    \\"@originjs/vite-plugin-assets\\":\\"latest\\",
    \\"unplugin-vue-components\\":\\"latest\\",
    \\"@originjs/vite-plugin-content\\":\\"latest\\",
    \\"@originjs/vite-plugin-pages\\":\\"latest\\",
    \\"typescript\\": \\"^4.3.2\\",
    \\"vite\\": \\"^2.4.4\\",
    \\"vue-tsc\\": \\"^0.2.2\\"
  }
}
"
`;

exports[`ori init without plugins: A3 2`] = `
"import { defineConfig } from 'vite'
import vue from '@vitejs/plugin-vue'
import assets from '@originjs/vite-plugin-assets'
import Components from 'unplugin-vue-components'
import content from '@originjs/vite-plugin-content'
import pages from '@originjs/vite-plugin-pages'

// https://vitejs.dev/config/
export default defineConfig({
  plugins:[
    vue(),
    assets(),
    Components({
      // allow auto load markdown components under \`./src/components/\`
      extensions: ['vue', 'md'],
      // allow typescript
      dts: true,
      // allow auto import and register components used in markdown
      include: [/\\\\.vue$/, /\\\\.vue\\\\?vue/, /\\\\.md$/],
    }),
    content(),
    pages()
  ]
})
"
`;

exports[`ori init without plugins: A4 1`] = `
"{
  \\"name\\": \\"testNoPlugins\\",
  \\"version\\": \\"1.0.0\\",
  \\"license\\": \\"ISC\\",
  \\"scripts\\": {
    \\"dev\\": \\"vite\\",
    \\"build\\": \\"vue-tsc --noEmit && vite build\\",
    \\"serve\\": \\"vite preview\\"
  },
  \\"dependencies\\": {
    \\"vue\\": \\"^3.0.5\\",
    \\"vue-router\\": \\"^4.0.11\\"
  },
  \\"devDependencies\\": {
    \\"@vitejs/plugin-vue\\": \\"^1.3.0\\",
    \\"@vue/compiler-sfc\\": \\"^3.0.5\\",
    \\"typescript\\": \\"^4.3.2\\",
    \\"vite\\": \\"^2.4.4\\",
    \\"vue-tsc\\": \\"^0.2.2\\"
  }
}
"
`;

exports[`ori init without plugins: A4 2`] = `
"import { defineConfig } from 'vite'
import vue from '@vitejs/plugin-vue'

// https://vitejs.dev/config/
export default defineConfig({
  plugins:[
    vue()
  ]
})
"
`;
